Fixed: wrong background during animation

--- a/src/main/resources/de/acepe/fritzstreams/style.css
+++ b/src/main/resources/de/acepe/fritzstreams/style.css
@@ -30,7 +30,7 @@
 }
 
 .scroll-pane {
-     -fx-background-color: transparent;
+     -fx-background-color: -acepe-fritz-yellow-bright;
 }
 
 .scroll-pane > .viewport {
